force-app/main/default/objects/SageExtract__c/SageExtract__c.object-meta.xml
<CustomObject>
    <label>SageExtract</label>
    <nameField>
        <label>SageExtract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SageExtracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>