force-app/main/default/objects/SageExtract__c/fields/AccountCostCentre__c.field-meta.xml
<CustomField>
    <fullName>AccountCostCentre__c</fullName>
    <label>AccountCostCentre</label>
    <length>30</length>
    <type>Text</type>
</CustomField>