force-app/main/default/objects/SageExtract__c/fields/AccountDepartment__c.field-meta.xml
<CustomField>
    <fullName>AccountDepartment__c</fullName>
    <label>AccountDepartment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>