force-app/main/default/objects/SageExtract__c/fields/AccountGroup__c.field-meta.xml
<CustomField>
    <fullName>AccountGroup__c</fullName>
    <formula>If(mid(AccountNumber__c,1,1)=&apos;4&apos;,&apos;Sales&apos;,
 If(mid(AccountNumber__c,1,4)=&apos;2200&apos;,&apos;Sales&apos;,
 If(mid(AccountNumber__c,1,4)=&apos;1205&apos;,&apos;Cash&apos;,
 If(mid(AccountNumber__c,1,4)=&apos;1100&apos;,&apos;Debtor&apos;,



AccountNumber__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountGroup</label>
    <type>Text</type>
</CustomField>