force-app/main/default/objects/SageExtract__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <label>AccountNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>