force-app/main/default/objects/SageExtract__c/fields/AmountFix__c.field-meta.xml
<CustomField>
    <fullName>AmountFix__c</fullName>
    <formula>If(mid(Name,1,3)=&apos;Vat&apos;,0-GoodsAmount__c,
GoodsAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AmountFix</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>