force-app/main/default/objects/SageExtract__c/fields/Bank_Statement__c.field-meta.xml
<CustomField>
    <fullName>Bank_Statement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Statement</label>
    <referenceTo>Bank_Statement__c</referenceTo>
    <relationshipLabel>SageExtracts</relationshipLabel>
    <relationshipName>SageExtracts</relationshipName>
    <type>Lookup</type>
</CustomField>