force-app/main/default/objects/SageExtract__c/fields/BankStatementCancelled__c.field-meta.xml
<CustomField>
    <fullName>BankStatementCancelled__c</fullName>
    <formula>Bank_Statement__r.Cancelled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankStatementCancelled</label>
    <type>Checkbox</type>
</CustomField>