force-app/main/default/objects/SageExtract__c/fields/BankStatementCreated__c.field-meta.xml
<CustomField>
    <fullName>BankStatementCreated__c</fullName>
    <formula>Bank_Statement__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankStatementCreated</label>
    <type>Date</type>
</CustomField>