force-app/main/default/objects/SageExtract__c/fields/BankStatementDate__c.field-meta.xml
<CustomField>
    <fullName>BankStatementDate__c</fullName>
    <formula>Bank_Statement__r.Entry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankStatementDate</label>
    <type>Date</type>
</CustomField>