force-app/main/default/objects/SageExtract__c/fields/BankStatementDetails__c.field-meta.xml
<CustomField>
    <fullName>BankStatementDetails__c</fullName>
    <formula>Bank_Statement__r.Transaction_Details__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankStatementDetails</label>
    <type>Text</type>
</CustomField>