force-app/main/default/objects/SageExtract__c/fields/BankStatementDoc__c.field-meta.xml
<CustomField>
    <fullName>BankStatementDoc__c</fullName>
    <formula>Bank_Statement__r.Document_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankStatementDoc</label>
    <type>Text</type>
</CustomField>