force-app/main/default/objects/SageExtract__c/fields/BankStatementId__c.field-meta.xml
<CustomField>
    <fullName>BankStatementId__c</fullName>
    <formula>Bank_Statement__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankStatementId</label>
    <type>Text</type>
</CustomField>