force-app/main/default/objects/SageExtract__c/fields/BankStatementLedgerBalance__c.field-meta.xml
<CustomField>
    <fullName>BankStatementLedgerBalance__c</fullName>
    <formula>Bank_Statement__r.Ledger_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankStatementLedgerBalance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>