force-app/main/default/objects/SageExtract__c/fields/BankStatementPortal__c.field-meta.xml
<CustomField>
    <fullName>BankStatementPortal__c</fullName>
    <formula>Bank_Statement__r.fromCustomerPortal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankStatementPortal</label>
    <type>Checkbox</type>
</CustomField>