force-app/main/default/objects/SageExtract__c/fields/DatePostedtoSage__c.field-meta.xml
<CustomField>
    <fullName>DatePostedtoSage__c</fullName>
    <label>DatePostedtoSage</label>
    <type>DateTime</type>
</CustomField>