force-app/main/default/objects/SageExtract__c/fields/GoodsAmount__c.field-meta.xml
<CustomField>
    <fullName>GoodsAmount__c</fullName>
    <label>GoodsAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>