force-app/main/default/objects/SageExtract__c/fields/Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice_Line</label>
    <referenceTo>Invoice_Line__c</referenceTo>
    <relationshipLabel>SageExtracts</relationshipLabel>
    <relationshipName>SageExtracts</relationshipName>
    <type>Lookup</type>
</CustomField>