force-app/main/default/objects/SageExtract__c/fields/InvoiceHeader__c.field-meta.xml
<CustomField>
    <fullName>InvoiceHeader__c</fullName>
    <formula>Invoice_Line__r.Invoice_HeaderId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvoiceHeader</label>
    <type>Text</type>
</CustomField>