force-app/main/default/objects/SageExtract__c/fields/InvoiceProduct__c.field-meta.xml
<CustomField>
    <fullName>InvoiceProduct__c</fullName>
    <formula>Invoice_Line__r.Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvoiceProduct</label>
    <type>Text</type>
</CustomField>