force-app/main/default/objects/SageExtract__c/fields/InvoiceVatAmount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceVatAmount__c</fullName>
    <formula>Invoice_Line__r.VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvoiceVatAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>