force-app/main/default/objects/SageExtract__c/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <label>Narrative</label>
    <length>30</length>
    <type>Text</type>
</CustomField>