force-app/main/default/objects/SageExtract__c/fields/PostedtoSage__c.field-meta.xml
<CustomField>
    <fullName>PostedtoSage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PostedtoSage</label>
    <type>Checkbox</type>
</CustomField>