force-app/main/default/objects/SageExtract__c/fields/Pro__c.field-meta.xml
<CustomField>
    <fullName>Pro__c</fullName>
    <formula>Invoice_Line__r.Product_AccCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pro</label>
    <type>Text</type>
</CustomField>