force-app/main/default/objects/SageExtract__c/fields/ReportAmount__c.field-meta.xml
<CustomField>
    <fullName>ReportAmount__c</fullName>
    <formula>If(AccountGroup__c=&apos;Sales&apos;,0-AmountFix__c,AmountFix__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReportAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>