force-app/main/default/objects/SageExtract__c/fields/sage_extract_case_safe_id__c.field-meta.xml
<CustomField>
    <fullName>sage_extract_case_safe_id__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sage extract case safe id</label>
    <type>Text</type>
</CustomField>