force-app/main/default/objects/SageExtract__c/fields/SageExtractFile__c.field-meta.xml
<CustomField>
    <fullName>SageExtractFile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SageExtractFile</label>
    <referenceTo>SageExtractFile__c</referenceTo>
    <relationshipLabel>SageExtracts</relationshipLabel>
    <relationshipName>SageExtracts</relationshipName>
    <type>Lookup</type>
</CustomField>