force-app/main/default/objects/SageExtract__c/fields/SageExtractFileName__c.field-meta.xml
<CustomField>
    <fullName>SageExtractFileName__c</fullName>
    <formula>SageExtractFile__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SageExtractFileName</label>
    <type>Text</type>
</CustomField>