force-app/main/default/objects/SageExtract__c/fields/SalesforceInvoice__c.field-meta.xml
<CustomField>
    <fullName>SalesforceInvoice__c</fullName>
    <formula>Invoice_Line__r.Salesforce__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesforceInvoice</label>
    <type>Checkbox</type>
</CustomField>