force-app/main/default/objects/SageExtract__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <defaultValue>&apos;3&apos;</defaultValue>
    <label>Source</label>
    <length>1</length>
    <type>Text</type>
</CustomField>