force-app/main/default/objects/SageExtract__c/fields/test3__c.field-meta.xml
<CustomField>
    <fullName>test3__c</fullName>
    <formula>If(mid(Name,1,1)=&apos;F&apos;,&quot;A&quot;,

If(AND (Bank_Statement__r.Cancelled__c =true ,datevalue(Bank_Statement__r.CreatedDate) &lt;&gt; datevalue(CreatedDate)) ,&quot;B&quot;,

IF(left(Bank_Statement__r.Document_name__c,12) = &apos;Direct Debit&apos;,&quot;C&quot;, &quot;D&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test3</label>
    <type>Text</type>
</CustomField>