force-app/main/default/objects/SageExtract__c/fields/test4__c.field-meta.xml
<CustomField>
    <fullName>test4__c</fullName>
    <formula>datevalue(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test4</label>
    <type>Date</type>
</CustomField>