force-app/main/default/objects/SageExtract__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <defaultValue>&apos;1&apos;</defaultValue>
    <label>TransactionType</label>
    <length>1</length>
    <type>Text</type>
</CustomField>