force-app/main/default/objects/SageExtract__c/fields/UniqueReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>UniqueReferenceNumber__c</fullName>
    <formula>RIGHT(SageExtractFile__r.Name,5)</formula>
    <label>UniqueReferenceNumber</label>
    <type>Text</type>
</CustomField>