force-app/main/default/objects/SageExtract__c/fields/url1__c.field-meta.xml
<CustomField>
    <fullName>url1__c</fullName>
    <formula>HYPERLINK(&quot;https://maps.google.com/maps&quot;,&quot;link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>url1</label>
    <type>Text</type>
</CustomField>