force-app/main/default/objects/SageExtract__c/fields/UserNumber__c.field-meta.xml
<CustomField>
    <fullName>UserNumber__c</fullName>
    <defaultValue>&apos;22&apos;</defaultValue>
    <label>UserNumber</label>
    <length>2</length>
    <type>Text</type>
</CustomField>