force-app/main/default/objects/SageExtract__c/recordTypes/SubcontractorSageExtract.recordType-meta.xml
<RecordType>
    <fullName>SubcontractorSageExtract</fullName>
    <active>true</active>
    <label>SubcontractorSageExtract</label>
</RecordType>