force-app/main/default/objects/SageExtract__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Invoice_Line__c</columns>
    <columns>NAME</columns>
    <columns>AccountNumber__c</columns>
    <columns>Bank_Statement__c</columns>
    <columns>Narrative__c</columns>
    <columns>TransactionDate__c</columns>
    <columns>GoodsAmount__c</columns>
    <columns>UniqueReferenceNumber__c</columns>
    <columns>Reference__c</columns>
    <columns>PostedtoSage__c</columns>
    <columns>BankStatementId__c</columns>
    <columns>InvoiceHeader__c</columns>
    <columns>url1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountNumber__c</field>
        <operation>greaterOrEqual</operation>
        <value>3999</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>1/1/2022 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>