force-app/main/default/objects/SageExtract__c/listViews/Copy_of_Sage_extract_search.listView-meta.xml
<ListView>
    <fullName>Copy_of_Sage_extract_search</fullName>
    <columns>Bank_Statement__c</columns>
    <columns>Narrative__c</columns>
    <columns>NAME</columns>
    <columns>AccountNumber__c</columns>
    <columns>GoodsAmount__c</columns>
    <columns>TransactionDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BankStatementId__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>TransactionDate__c</field>
        <operation>equals</operation>
        <value>3/1/2019</value>
    </filters>
    <filters>
        <field>AccountNumber__c</field>
        <operation>equals</operation>
        <value>1100</value>
    </filters>
    <label>Bank payments details</label>
</ListView>