force-app/main/default/objects/SageExtract__c/listViews/Not_Posted_to_Sage.listView-meta.xml
<ListView>
    <fullName>Not_Posted_to_Sage</fullName>
    <columns>TransactionType__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>AccountNumber__c</columns>
    <columns>InvoiceProduct__c</columns>
    <columns>GoodsAmount__c</columns>
    <columns>TransactionDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Invoice_Line__c</columns>
    <columns>Bank_Statement__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PostedtoSage__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TransactionType__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Not Posted to Sage</label>
</ListView>